--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -7,9 +7,6 @@ header {
     z-index: 1000;
     background: transparent;
     transition: 0.6s;
-    @media (max-width: 767px) {
-        height: 85px;
-    }
     &.active {
         height: var(--hdheight);
         background: #151515;
@@ -34,6 +31,9 @@ header {
                 }
                 @media (max-width: 767px) {
                     width: 140px;
+                }
+                @media (max-width: 320px) {
+                    width: 110px;
                 }
                 a {
                     display: block;
@@ -92,6 +92,7 @@ header {
                         li {
                             font-size: 1.7em;
                             font-family: "Poppins", sans-serif;
+                            font-weight: 500;
                             color: #ffffff;
                             text-decoration: none;
                             padding: 7px 0;
