--- a/src/components/ProductItem/style.scss
+++ b/src/components/ProductItem/style.scss
@@ -66,26 +66,31 @@
             font-weight: 700;
             margin: 7px 0;
         }
-        button {
-            font-size: 1.6em;
-            font-family: "Poppins", sans-serif;
-            font-weight: 500;
-            background: #ffffff;
-            border: 1px solid var(--orange-primary);
-            color: #111111;
-            border-radius: 4px;
-            padding: 5px 10px;
-            outline: none;
-            cursor: pointer;
-            transition: 0.4s;
-            -webkit-tap-highlight-color: transparent;
-            &:hover {
-                background: #e14722;
+        .btngroup {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            button {
+                font-size: 1.6em;
+                font-family: "Poppins", sans-serif;
+                font-weight: 500;
+                background: #ffffff;
+                border: 1px solid var(--orange-primary);
+                color: #111111;
+                border-radius: 4px;
+                padding: 5px 10px;
+                outline: none;
+                cursor: pointer;
                 transition: 0.4s;
-                color: #ffffff;
-                @media (max-width: 991px) {
-                    background: #ffffff;
-                    color: #111111;
+                -webkit-tap-highlight-color: transparent;
+                &:hover {
+                    background: #e14722;
+                    transition: 0.4s;
+                    color: #ffffff;
+                    @media (max-width: 991px) {
+                        background: #ffffff;
+                        color: #111111;
+                    }
                 }
             }
             i {
@@ -93,10 +98,30 @@
                 height: 100%;
                 display: flex;
                 align-items: center;
-                img {
-                    width: 100%;
-                    height: 100%;
+                margin-right: 10px;
+                opacity: 0;
+                pointer-events: none;
+                transition: 0.5s;
+                -webkit-tap-highlight-color: transparent;
+                @media (max-width: 991px) {
+                    opacity: 1;
+                    pointer-events: auto;
+                    margin-right: 5px;
                 }
+                &:hover {
+                    svg {
+                        color: #9e9191;
+                    }
+                }
+            }
+        }
+    }
+    &:hover {
+        .btngroup {
+            i {
+                opacity: 1;
+                pointer-events: auto;
+                transition: 0.5s;
             }
         }
     }
