--- a/src/components/ProductItem/component/QuickView/style.scss
+++ b/src/components/ProductItem/component/QuickView/style.scss
@@ -10,8 +10,8 @@
         width: 88%;
     }
     .row {
-        // padding-bottom: 10px;
         background: #ffffff;
+        position: relative;
         h2 {
             font-size: 2.8em;
             font-weight: 600;
@@ -199,11 +199,15 @@
     }
     .close {
         position: absolute;
-        top: 5px;
-        right: 3px;
-        font-size: 2.3em;
+        top: 0;
+        right: 10px;
+        font-size: 23px;
         cursor: pointer;
         -webkit-tap-highlight-color: transparent;
+        @media (max-width: 991px) {
+            font-size: 30px;
+            right: 6px;
+        }
     }
 }
 .modal {
