add filter by range price

--- a/src/features/ProductsPage/component/Categories/style.scss
+++ b/src/features/ProductsPage/component/Categories/style.scss
@@ -36,3 +36,9 @@
         }
     }
 }
+.MuiSlider-markLabel {
+    font-size: 1rem !important;
+}
+.MuiTypography-gutterBottom {
+    margin: 5px 0 0 !important;
+}
