--- a/src/features/ProductsPage/style.scss
+++ b/src/features/ProductsPage/style.scss
@@ -1,9 +1,33 @@
 .container.--productspage {
     max-width: 1100px;
+    min-height: 100vh;
     padding-top: 30px;
     margin-top: var(--hdheight);
+    position: relative;
     .row.--productspage {
         margin-right: -10px;
         margin-left: -10px;
+    }
+}
+.notfoundproduct {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    i {
+        max-width: 200px;
+        display: block;
+        margin: 20px auto 0;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    p {
+        font-size: 2em;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        text-align: center;
+        line-height: 25px;
     }
 }
