--- a/src/pages/HomePage/component/SlickSlider/style.scss
+++ b/src/pages/HomePage/component/SlickSlider/style.scss
@@ -22,10 +22,22 @@
                             position: relative;
                             outline: none;
                             picture {
+                                width: 100%;
                                 height: 100%;
+                                display: block;
+                                position: relative;
+                                overflow: hidden;
                                 img {
-                                    height: 100%;
+                                    display: block;
                                     width: 100%;
+                                    // height: 100%;
+                                    position: absolute;
+                                    top: 50%;
+                                    left: 50%;
+                                    transform: translate(-50%, -50%);
+                                    @media (max-width: 1024px) {
+                                        height: 100%;
+                                    }
                                 }
                             }
                         }
