--- a/src/components/ProductItem/style.scss
+++ b/src/components/ProductItem/style.scss
@@ -59,26 +59,34 @@
                 }
             }
         }
-        p {
-            font-size: 1.6em;
-            color: #111111;
-            font-family: "Poppins", sans-serif;
-            font-weight: 700;
-            margin: 7px 0;
+        .pricegroup {
+            display: flex;
+            justify-content: space-between;
+            p {
+                font-size: 1.6em;
+                color: #111111;
+                font-family: "Poppins", sans-serif;
+                font-weight: 700;
+                margin: 7px 0;
+            }
+            .oldprice {
+                font-weight: initial;
+                text-decoration: line-through;
+            }
         }
         .btngroup {
             display: flex;
             justify-content: space-between;
             align-items: center;
             button {
-                font-size: 1.5em;
+                font-size: 1.4em;
                 font-family: "Poppins", sans-serif;
                 font-weight: 500;
                 background: #ffffff;
                 border: 1px solid var(--orange-primary);
                 color: #111111;
                 border-radius: 4px;
-                padding: 4px 8px;
+                padding: 5px 7px;
                 outline: none;
                 cursor: pointer;
                 transition: 0.4s;
@@ -135,6 +143,31 @@
         }
     }
     .newtag {
+        position: absolute;
+        top: 15px;
+        height: 25px;
+        width: 35px;
+        left: 0;
+        margin-left: -4px;
+        background: var(--orange-primary);
+        color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.3em;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        &:after {
+            content: "";
+            position: absolute;
+            bottom: -6px;
+            left: 0;
+            border-top: 6px solid var(--orange-primary);
+            border-left: 4px solid transparent;
+            filter: brightness(60%);
+        }
+    }
+    .saletag {
         position: absolute;
         top: 15px;
         height: 25px;
