--- a/src/features/ProductsPage/style.scss
+++ b/src/features/ProductsPage/style.scss
@@ -10,10 +10,11 @@
     }
 }
 .notfoundproduct {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     i {
         max-width: 200px;
         display: block;
