--- a/src/pages/HomePage/component/SlickSlider/style.scss
+++ b/src/pages/HomePage/component/SlickSlider/style.scss
@@ -29,15 +29,13 @@
                                 overflow: hidden;
                                 img {
                                     display: block;
-                                    width: 100%;
-                                    // height: 100%;
+                                    min-width: 100%;
+                                    min-height: 100%;
+                                    object-fit: cover;
                                     position: absolute;
                                     top: 50%;
                                     left: 50%;
                                     transform: translate(-50%, -50%);
-                                    @media (max-width: 1024px) {
-                                        height: 100%;
-                                    }
                                 }
                             }
                         }
@@ -108,30 +106,29 @@
                     font-size: 15px;
                 }
             }
-            // &:focus:before {
-            //     opacity: 0.75;
-            // }
+            &:focus:before {
+                opacity: 0.25;
+            }
         }
         &.slick-active {
-            // button {
-            //     &:focus::before {
-            //         opacity: 0;
-            //     }
-            // }
-            opacity: 1;
+            button {
+                &:before {
+                    opacity: 1 !important;
+                }
+            }
         }
     }
 }
-.slick-dots li.slick-active button:before {
-    opacity: 1;
-    color: black;
-}
-.slick-dots li button:hover:before {
-    opacity: 1;
-}
-.slick-dots li button:focus:before {
-    opacity: 1;
-}
+// .slick-dots li.slick-active button:before {
+//     opacity: 1;
+//     color: black;
+// }
+// .slick-dots li button:hover:before {
+//     opacity: 1;
+// }
+// .slick-dots li button:focus:before {
+//     opacity: 1;
+// }
 // .slick-dots li button:hover:before,
 // .slick-dots li button:focus:before {
 //     opacity: unset;
@@ -213,14 +210,16 @@
             }
         }
         h2 {
-            font-size: 2.8em;
+            font-size: 2.2em;
             color: #ffffff;
             font-family: "Poppins", sans-serif;
             font-weight: 600;
-            line-height: 54px;
+            line-height: 50px;
+            user-select: none;
+            pointer-events: none;
             @media (max-width: 767px) {
-                font-size: 2em;
-                line-height: 45px;
+                font-size: 1.7em;
+                line-height: 37px;
             }
             // translate: translateY(-20px);
             // animation-delay: 0.3s;
@@ -230,15 +229,17 @@
             background: var(--orange-primary);
             border: none;
             outline: none;
-            padding: 10px 15px;
+            padding: 8px 12px;
             border-radius: 50px;
             margin-top: 50px;
+            user-select: none;
+            -webkit-tap-highlight-color: transparent;
             // animation-delay: 0.3s;
             // animation: slideup 1.2s;
             a {
                 text-decoration: none;
                 color: #ffffff;
-                font-size: 2em;
+                font-size: 1.8em;
                 font-family: "Poppins", sans-serif;
                 font-weight: 500;
                 display: block;
