--- a/src/features/ProductDetailPage/Components/TabProduct/style.scss
+++ b/src/features/ProductDetailPage/Components/TabProduct/style.scss
@@ -2,7 +2,6 @@
     margin-top: 50px;
     .tabs {
         .container {
-            background: #ffffff;
             .tablist {
                 display: flex;
                 justify-content: center;
@@ -17,10 +16,13 @@
                     transition: 0.3s;
                     text-align: center;
                     cursor: pointer;
-                    &:before {
+                    @media (max-width: 320px){
+                        padding: 5px;
+                    }
+                    &:after {
                         content: "";
                         position: absolute;
-                        top: 0px;
+                        bottom: 0px;
                         left: 0;
                         width: 100%;
                         height: 2px;
@@ -30,14 +32,14 @@
                     &:hover {
                         background: #f5f5f5;
                         transition: 0.3s;
-                        &:before {
+                        &:after {
                             display: block;
                         }
                     }
                     &.active {
                         background: #f5f5f5;
                         transition: 0.3s;
-                        &:before {
+                        &:after {
                             display: block;
                         }
                     }
@@ -48,6 +50,7 @@
     .container {
         .tabcontent {
             display: none;
+            min-height: 300px;
             &.show {
                 display: block;
                 animation: fadeIn 0.5s;
@@ -62,7 +65,7 @@
         .--use {
             max-width: 550px;
             margin: 0 auto;
-            padding-top: 20px;
+            margin-top: 20px;
             p {
                 font-size: 1.5em;
                 font-family: "Poppins", sans-serif;
