fix sleketon loading and client review

--- a/src/pages/HomePage/component/ProductsCarousel/style.scss
+++ b/src/pages/HomePage/component/ProductsCarousel/style.scss
@@ -27,6 +27,7 @@
     .slick-slider {
         padding-bottom: 70px;
         .slick-list {
+            padding: 5px 0;
             .slick-track {
                 .slick-slide {
                     outline: none;
