--- a/src/features/CartPage/Components/CartItem/style.scss
+++ b/src/features/CartPage/Components/CartItem/style.scss
@@ -8,6 +8,10 @@
     padding: 10px;
     margin: 0 auto;
     max-width: 600px;
+    @media (max-width: 320px) {
+        flex-direction: column;
+        align-items: center;
+    }
     &:not(:first-child) {
         margin-top: 20px;
     }
