--- a/src/features/ProductDetailPage/Components/ClientReview/style.scss
+++ b/src/features/ProductDetailPage/Components/ClientReview/style.scss
@@ -51,6 +51,7 @@
                             font-size: 1.7em;
                             font-family: "Poppins", sans-serif;
                             font-weight: 500;
+                            line-height: 17px;
                         }
                         p {
                             font-size: 1.2em;
@@ -88,7 +89,7 @@
                 textarea {
                     width: 100%;
                     height: 150px;
-                    font-size: 1.6em;
+                    font-size: 16px;
                     resize: none;
                     outline: none;
                     border-color: #cccccc;
