--- a/src/features/ProductDetailPage/Components/ProductInfo/style.scss
+++ b/src/features/ProductDetailPage/Components/ProductInfo/style.scss
@@ -8,8 +8,9 @@
             font-weight: 600;
             font-family: "Poppins", sans-serif;
             line-height: 33px;
-            @media (max-width: 767px){
+            @media (max-width: 767px) {
                 font-size: 2.5em;
+                line-height: 28px;
             }
         }
         p {
@@ -18,8 +19,6 @@
             margin-top: 5px;
         }
     }
-    // &__below {
-    // display: flex;
     .row {
         padding-bottom: 10px;
         .image {
