--- a/src/scss/imports/core/_layouts.scss
+++ b/src/scss/imports/core/_layouts.scss
@@ -22,7 +22,8 @@ body {
     width: 100%;
     max-width: $container-max-width;
     margin: auto;
-    @include text($fz-text, $font-main, $lh-text, $text-cl, none);
+    // @include text($fz-text, $font-main, $lh-text, $text-cl, none);
+    font-family: "Poppins", sans-serif !important;
     background: #f5f5f5;
     behavior: smooth;
     position: relative;
@@ -36,6 +37,12 @@ body {
         font-size: 62.5%;
         @media (max-width: 991px) {
             font-size: 60%;
+        }
+        @media (max-width: 767px) {
+            font-size: 57%;
+        }
+        @media (max-width: 375px) {
+            font-size: 55%;
         }
         --mgspace: 50px;
     }
