--- a/src/features/AccountPage/components/PurchaseHistory/style.scss
+++ b/src/features/AccountPage/components/PurchaseHistory/style.scss
@@ -79,3 +79,11 @@
     top: 45%;
     left: 45%;
 }
+.notiemptypurchasehistory {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.6em;
+    text-align: center;
+}
