--- a/src/features/AccountPage/components/AccountCategories/style.scss
+++ b/src/features/AccountPage/components/AccountCategories/style.scss
@@ -3,12 +3,17 @@
     background: #ffffff;
     border-radius: 6px;
     padding: 10px;
-    li {
+    a {
         font-size: 1.7em;
         font-weight: 500;
         padding: 10px 0;
         border-bottom: 1px solid #e1e1e1;
         cursor: pointer;
+        display: block;
+        color: #000000;
+        &:first-of-type {
+            padding-top: 0;
+        }
         &:hover {
             color: var(--orange-primary);
         }
