--- a/src/features/AccountPage/components/UserInfo/style.scss
+++ b/src/features/AccountPage/components/UserInfo/style.scss
@@ -3,30 +3,53 @@
     padding: 10px;
     border-radius: 6px;
     min-height: 500px;
+    @media (max-width: 767px) {
+        margin-top: 20px;
+    }
     .userinfo {
         width: 80%;
         margin: 0 auto;
         @media (max-width: 767px) {
             width: 100%;
-            margin-top: 20px;
         }
         &__avatar {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
             margin: 25px auto;
-            background: var(--orange-primary);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 50px;
-            p {
-                font-size: 3em;
-                color: #ffffff;
+            margin-bottom: 40px;
+            text-align: center;
+            &-text {
+                width: 100px;
+                height: 100px;
+                margin: 0 auto;
+                border-radius: 50%;
+                background: var(--orange-primary);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                p {
+                    font-size: 3em;
+                    color: #ffffff;
+                }
+            }
+            &-img {
+                width: 150px;
+                padding-top: 150px;
+                position: relative;
+                border-radius: 50%;
+                overflow: hidden;
+                margin: 0 auto;
+                img {
+                    min-width: 100%;
+                    min-height: 100%;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    object-fit: cover;
+                }
             }
         }
         .userinfotextwrapper {
-            min-height: 220px;
+            min-height: 200px;
             .userinfotextbox {
                 display: flex;
                 align-items: center;
