--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -138,7 +138,6 @@ header {
             i {
                 width: 38px;
                 display: flex;
-                justify-content: center;
                 .adminicon {
                     font-size: 40px;
                     color: #ffffff;
@@ -189,6 +188,8 @@ header {
                 }
             }
             a {
+                display: flex;
+                align-items: center;
                 .searchicon {
                     color: #ffffff;
                     font-size: 38px;
@@ -202,7 +203,8 @@ header {
                 }
             }
             i.carticonwrap {
-                display: block;
+                display: flex;
+                align-items: center;
                 margin: 0 10px;
                 position: relative;
                 @media (max-width: 991px) {
