--- a/src/features/AccountPage/components/UserInfo/style.scss
+++ b/src/features/AccountPage/components/UserInfo/style.scss
@@ -14,8 +14,56 @@
         }
         &__avatar {
             margin: 25px auto;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-align: center;
+            &-popup {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                z-index: 100;
+                opacity: 0;
+                transform: scale(0.6);
+                transition: 0.5s;
+                pointer-events: none;
+                .imgwrapper {
+                    width: 100%;
+                    max-width: 450px;
+                    padding-top: 350px;
+                    position: relative;
+                    overflow: hidden;
+                    z-index: 1;
+                    margin: 0 10px;
+                    img {
+                        width: 100%;
+                        min-width: 100%;
+                        min-height: 100%;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        object-fit: cover;
+                    }
+                    .close {
+                        position: absolute;
+                        right: 10px;
+                        top: 5px;
+                        font-size: 22px;
+                        color: #ffffff;
+                        cursor: pointer;
+                    }
+                }
+                &.active {
+                    opacity: 1;
+                    transform: scale(1);
+                    transition: 0.5s;
+                    pointer-events: auto;
+                }
+            }
             &-text {
                 width: 100px;
                 height: 100px;
@@ -37,6 +85,8 @@
                 border-radius: 50%;
                 overflow: hidden;
                 margin: 0 auto;
+                cursor: pointer;
+                -webkit-tap-highlight-color: transparent;
                 img {
                     min-width: 100%;
                     min-height: 100%;
@@ -66,13 +116,15 @@
                 }
                 input {
                     width: 70%;
-                    // max-width: 250px;
                     margin-left: auto;
                     font-size: 1.8em;
                     outline: none;
                     padding: 5px 10px;
                     border: 1px solid #e1e1e1;
                     border-radius: 5px;
+                    @media (max-width: 1024px) {
+                        width: initial;
+                    }
                 }
                 &:nth-last-child() {
                     margin-bottom: 0;
@@ -94,6 +146,20 @@
             p {
                 font-size: 1.1rem;
             }
+        }
+    }
+    .modal {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.7);
+        opacity: 0;
+        pointer-events: none;
+        &.active {
+            opacity: 1;
+            pointer-events: auto;
         }
     }
 }
