--- a/src/features/ProductDetailPage/Components/ClientReview/style.scss
+++ b/src/features/ProductDetailPage/Components/ClientReview/style.scss
@@ -51,6 +51,9 @@
                             width: 50px;
                             padding-top: 50px;
                         }
+                        box-shadow: 0px 0px 3px 0px rgba(97, 94, 94, 0.75);
+                        -webkit-box-shadow: 0px 0px 3px 0px rgba(97, 94, 94, 0.75);
+                        -moz-box-shadow: 0px 0px 3px 0px rgba(97, 94, 94, 0.75);
                         img {
                             min-width: 100%;
                             min-height: 100%;
