--- a/src/features/AccountPage/components/UserInfo/style.scss
+++ b/src/features/AccountPage/components/UserInfo/style.scss
@@ -25,36 +25,27 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                z-index: 100;
+                z-index: 1000;
                 opacity: 0;
                 transform: scale(0.6);
                 transition: 0.5s;
                 pointer-events: none;
                 .imgwrapper {
                     width: 100%;
-                    max-width: 450px;
-                    padding-top: 350px;
+                    max-width: 550px;
+                    padding-top: 400px;
                     position: relative;
                     overflow: hidden;
                     z-index: 1;
                     margin: 0 10px;
                     img {
                         width: 100%;
-                        min-width: 100%;
-                        min-height: 100%;
+                        height: 100%;
                         position: absolute;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        object-fit: cover;
-                    }
-                    .close {
-                        position: absolute;
-                        right: 10px;
-                        top: 5px;
-                        font-size: 22px;
-                        color: #ffffff;
-                        cursor: pointer;
+                        object-fit: contain;
                     }
                 }
                 &.active {
@@ -62,6 +53,23 @@
                     transform: scale(1);
                     transition: 0.5s;
                     pointer-events: auto;
+                }
+                .close {
+                    position: absolute;
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    right: 15px;
+                    top: 15px;
+                    font-size: 22px;
+                    background: #cccccc;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    p {
+                        font-size: 18px;
+                    }
                 }
             }
             &-text {
