--- a/src/features/AccountPage/components/AccountCategories/style.scss
+++ b/src/features/AccountPage/components/AccountCategories/style.scss
@@ -15,7 +15,7 @@
             padding-top: 0;
         }
         &:hover {
-            color: var(--orange-primary);
+            color: #c5c5c5;
         }
         &.active {
             color: var(--orange-primary);
