--- a/src/features/AccountPage/components/PurchaseHistory/style.scss
+++ b/src/features/AccountPage/components/PurchaseHistory/style.scss
@@ -1,14 +1,14 @@
 .purchaseHistoryWrapper {
-    padding: 15px;
-    background: #ffffff;
-    border-radius: 6px;
-    height: 500px;
-    overflow: auto;
-    position: relative;
-    @media (max-width: 767px) {
-        margin-top: 20px;
-        padding: 10px;
-    }
+    // padding: 15px;
+    // background: #ffffff;
+    // border-radius: 6px;
+    // height: 500px;
+    // overflow: auto;
+    // position: relative;
+    // @media (max-width: 767px) {
+    //     margin-top: 20px;
+    //     padding: 10px;
+    // }
 
     &::-webkit-scrollbar {
         width: 5px;
