--- a/src/features/AccountPage/components/AccountCategories/style.scss
+++ b/src/features/AccountPage/components/AccountCategories/style.scss
@@ -15,7 +15,7 @@
             padding-top: 0;
         }
         &:hover {
-            color: #c5c5c5;
+            color: #5f5a5a;
         }
         &.active {
             color: var(--orange-primary);
