--- a/src/pages/HomePage/component/BackToTopBtn/style.scss
+++ b/src/pages/HomePage/component/BackToTopBtn/style.scss
@@ -31,8 +31,13 @@
         height: 50px;
         border: 4px solid #545252;
         border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         i {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -45,7 +50,7 @@
 }
 @keyframes slideupdown {
     from {
-        transform: translateY(7px);
+        transform: translateY(5px);
         opacity: 0.5;
     }
     to {
