--- a/src/pages/HomePage/component/Benefits/style.scss
+++ b/src/pages/HomePage/component/Benefits/style.scss
@@ -5,27 +5,42 @@
     }
     .container {
         display: flex;
-        flex-wrap: wrap;
+        justify-content: space-evenly;
+        @media (max-width: 767px) {
+            flex-wrap: wrap;
+        }
         .benefit {
-            display: flex;
-            align-items: center;
-            padding: 0 25px;
-            flex: 0 0 33.33%;
+            padding: 0 20px;
             @media (max-width: 767px) {
-                padding: 0;
-                flex: 0 0 100%;
+                display: flex;
+                align-items: center;
+                width: 100%;
             }
             &__img {
                 width: 100%;
                 max-width: 50px;
+                display: flex;
+                align-items: center;
+                margin: 0 auto;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+                @media (max-width: 767px) {
+                    margin: initial;
+                }
             }
             &__text {
-                margin-left: 20px;
+                text-align: center;
+                @media (max-width: 767px) {
+                    margin-left: 20px;
+                    text-align: initial;
+                }
                 h3 {
                     font-size: 1.8em;
                     font-family: "Poppins", sans-serif;
                     font-weight: 600;
-                    margin-bottom: 7px;
+                    margin-bottom: 5px;
                 }
                 p {
                     font-size: 1.6em;
