--- a/src/features/AccountPage/components/ProductReview/style.scss
+++ b/src/features/AccountPage/components/ProductReview/style.scss
@@ -18,6 +18,7 @@
                     display: inline-block;
                     margin-left: 10px;
                     font-weight: 500;
+                    cursor: pointer;
                 }
             }
         }
