--- a/src/features/CartPage/Components/CartList/style.scss
+++ b/src/features/CartPage/Components/CartList/style.scss
@@ -1,11 +1,18 @@
 .container.--cartlist {
-    margin-top: 120px;
+    margin-top: calc(var(--hdheight) + 50px);
+    height: 70vh;
+    position: relative;
     .cartwrap {
         margin: 0 auto;
         max-width: 640px;
         border: 1px solid #dddddd;
         border-radius: 5px;
         overflow: hidden;
+        position: absolute;
+        width: 92%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         .cartarea {
             height: 400px;
             padding: 15px;
@@ -47,19 +54,16 @@
                 }
             }
         }
-        &.hide {
-            display: none;
-        }
     }
     .emptystatus {
-        display: none;
         max-width: 450px;
-        margin: 140px auto;
+        position: absolute;
+        width: 92%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         @media (max-width: 767px) {
             max-width: 310px;
-        }
-        &.show {
-            display: block;
         }
         img {
             width: 100%;
