--- a/src/features/AccountPage/components/UserInfo/style.scss
+++ b/src/features/AccountPage/components/UserInfo/style.scss
@@ -98,6 +98,7 @@
                 margin: 0 auto;
                 cursor: pointer;
                 -webkit-tap-highlight-color: transparent;
+                border: 1px solid #e1e1e1;
                 img {
                     min-width: 100%;
                     min-height: 100%;
