--- a/src/features/CartPage/Components/CartList/style.scss
+++ b/src/features/CartPage/Components/CartList/style.scss
@@ -1,6 +1,6 @@
 .container.--cartlist {
-    margin-top: calc(var(--hdheight) + 50px);
-    height: 70vh;
+    margin-top: var(--hdheight);
+    height: calc(100vh - var(--hdheight));
     position: relative;
     .cartwrap {
         margin: 0 auto;
