--- a/src/features/AccountPage/style.scss
+++ b/src/features/AccountPage/style.scss
@@ -1,8 +1,12 @@
+.container.--accountpage {
+    margin-top: calc(var(--hdheight) + 30px);
+    // height: calc(100vh - var(--hdheight));
+}
 .usercontent {
     padding: 15px;
     background: #ffffff;
     border-radius: 6px;
-    height: 510px;
+    min-height: 480px;
     overflow: auto;
     position: relative;
     @media (max-width: 767px) {
