--- a/src/pages/HomePage/component/SlickSlider/style.scss
+++ b/src/pages/HomePage/component/SlickSlider/style.scss
@@ -194,7 +194,7 @@
                 animation-delay: 0.3s;
                 animation: slidedown 1.2s;
             }
-            button {
+            .shopnowbtn {
                 animation-delay: 0.3s;
                 animation: slideup 1.2s;
             }
@@ -205,7 +205,7 @@
                 animation-delay: 0.3s;
                 animation: slidefromleft 1.2s;
             }
-            button {
+            .shopnowbtn {
                 animation-delay: 0.3s;
                 animation: slidefromright 1.2s;
             }
@@ -227,23 +227,30 @@
                 line-height: 35px;
             }
         }
-        button {
+        .shopnowbtn {
             background: var(--orange-primary);
-            border: none;
-            outline: none;
-            padding: 8px 12px;
+            padding: 0;
+            width: 115px;
+            height: 43px;
             border-radius: 50px;
             margin-top: 50px;
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             pointer-events: auto;
+            cursor: pointer;
+            position: relative;
             a {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
                 text-decoration: none;
                 color: #ffffff;
-                font-size: 1.8em;
-                font-family: "Poppins", sans-serif;
                 font-weight: 500;
                 display: block;
+                width: 100%;
+                text-align: center;
+                font-size: 1.2em;
             }
         }
     }
