--- a/src/features/ProductsPage/component/Categories/style.scss
+++ b/src/features/ProductsPage/component/Categories/style.scss
@@ -42,3 +42,6 @@
 .MuiTypography-gutterBottom {
     margin: 5px 0 0 !important;
 }
+.sortbyprice .MuiInput-underline:before {
+    border-bottom: 1px solid #e1e1e1;
+}
