--- a/src/components/ProductItem/style.scss
+++ b/src/components/ProductItem/style.scss
@@ -13,11 +13,11 @@
     background: #ffffff;
     scroll-snap-align: center;
     position: relative;
-    div {
+    &__img {
         display: block;
         overflow: hidden;
         -webkit-tap-highlight-color: transparent;
-        .productitem__img {
+        div {
             padding-top: 100%;
             background-size: cover;
             background-repeat: no-repeat;
@@ -140,32 +140,7 @@
             }
         }
     }
-    .newtag {
-        position: absolute;
-        top: 15px;
-        height: 25px;
-        width: 35px;
-        left: 0;
-        margin-left: -4px;
-        background: var(--orange-primary);
-        color: #ffffff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.3em;
-        font-family: "Poppins", sans-serif;
-        font-weight: 500;
-        &:after {
-            content: "";
-            position: absolute;
-            bottom: -6px;
-            left: 0;
-            border-top: 6px solid var(--orange-primary);
-            border-left: 4px solid transparent;
-            filter: brightness(60%);
-        }
-    }
-    .saletag {
+    .producttag {
         position: absolute;
         top: 15px;
         height: 25px;
